style: aplicado estilos ao formulário

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Cadastro de Endereço</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="font-display text-texto" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
